--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
       run: docker build -f Dockerfile -t myapp:latest .
 
     - name: Docker Scout Scan
-      run: 
+      run: | 
         curl -sSfL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh
         sh install-scout.sh
 
@@ -54,3 +54,4 @@ jobs:
         
         docker scout quickview
         docker scout cves
+
