--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
         path: bandit-report.json
 
   image_scan:
-    name: Build Image and Run Bandit Scan
+    name: Build Image and Run Docker Scout Scan
     runs-on: ubuntu-latest
   
     steps:
@@ -38,20 +38,10 @@ jobs:
       uses: actions/checkout@v2
   
     - name: Set up Docker
-      uses: docker-practice/actions-setup-docker@v1
-      with:
-        docker_version: '20.10.7'
+      uses: docker/setup-buildx-action@v1
 
     - name: Build Docker Image
       run: docker build -f Dockerfile -t myapp:latest .
-
-    # - name: Docker Scout Scan
-    #   run: | 
-    #     curl -sSfL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh
-    #     sh install-scout.sh
-    #     echo ${{ secrets.REPO_PWD }} | docker login -u ${{ secrets.REPO_USER }} --password-stdin    
-    #     docker scout quickview
-    #     docker scout cves
 
     - name: Docker Scout Scan
       uses: docker/scout-action@v1.0.9
@@ -61,4 +51,3 @@ jobs:
         command: quickview,cves
         only-severities: critical,high
         sarif-file: scout-report.sarif
-
